[tool.poetry]
name = "opteemo-hello-poetry"
version = "0.3.0"
description = ""
authors = ["Yannick Mulot <ymulot@opteemo.fr>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
hello = 'opteemo_hello_poetry:__main__.cli'

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"